fixing center align bug

--- a/main/style.css
+++ b/main/style.css
@@ -268,6 +268,7 @@ header > div {
 /** section2 */
 #section2 .content .project {
   position: relative;
+  margin-inline: auto;
   width: 90%;
   aspect-ratio: 16 / 9;
   max-width: 40rem;
